# petro-graphs

./: .gitignore  README.md  e2e-verify.mjs  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/: appimage-preflight.sh
.github/workflows/: ci.yml  release.yml
public/sre/: speech-worker.js
scripts/: generate-cert.ps1  generate-icon.py  tauri-run.mjs  test-grid-dialog.mjs  test-latex-debug.mjs  test-latex-svg.mjs  test-latex.mjs  test-pan-export.mjs
src/: App.tsx  fabricRef.ts  fileOps.ts  index.css  latexRenderer.ts  persistence.ts  store.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src/components/: CalibrationModal.tsx  CanvasArea.tsx  ErrorBoundary.tsx  ExportModal.tsx  GridDialog.tsx  GridLayoutModal.tsx  LayersPanel.tsx  LeftSidebar.tsx  MetadataModal.tsx  PageTabs.tsx  RightSidebar.tsx  Topbar.tsx  UpdateNotifier.tsx
src/test/: components.test.tsx  latexRenderer.test.ts  setup.ts  store.test.ts  utils.test.ts
